--- a/hs.cabal
+++ b/hs.cabal
@@ -1,6 +1,6 @@
 cabal-version: 3.0
 name:          hs
-version:       0.1.0.0
+version:       0.1.0.3
 
 executable hs
     main-is:          Main.hs
@@ -13,6 +13,6 @@ executable hs
 test-suite hs-test
   type: exitcode-stdio-1.0
   main-is: Test.hs
-  build-depends: base, hs
+  build-depends: base ^>=4.19.1.0
   hs-source-dirs: tests
   default-language: Haskell2010
