--- a/hs.cabal
+++ b/hs.cabal
@@ -6,6 +6,7 @@ library
   exposed-modules: Thirty, One
   build-depends: base ^>=4.19.0.0
   hs-source-dirs: app
+  ghc-options:         -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
   default-language: Haskell2010
 
 executable hs
