--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Setup Haskell
-      uses: haskell/actions/setup@v2
+      uses: haskell-actions/setup@v2
       with:
         ghc-version: '9.8.2'
         cabal-version: '3.10'
@@ -49,4 +49,4 @@ jobs:
 
     - name: Check formatting with fourmolu
       run: |
-        fourmolu --mode check $(find app tests -name "*.hs")
+        find app tests -name "*.hs" -exec fourmolu --mode check {} +
