--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,9 @@ jobs:
         cabal test all --test-show-details=always
 
     - name: Lint with HLint
-      run: hlint .
+      run: |
+        
+        hlint .
 
     - name: Check formatting with fourmolu
       run: |
