--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,8 +61,10 @@ jobs:
     
     - name: Run HLint
       run: |
-        hlint src/ tests/ app/ --refactor-options="-i"
-        hlint src/ tests/ app/
+        hlint src/Structure.hs --refactor-options="-i"
+        hlint src/Structure/Internal.hs --refactor-options="-i"
+        hlint tests/Test.hs --refactor-options="-i"
+        hlint src/ tests/
 
   fourmolu:
     runs-on: ubuntu-latest
